// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentCard.vue renders a component 1`] = `
<div>
  <div
    class="card content-card sm has-size light rounded"
    tabindex=""
  >
    <div
      class="content-card-backdrop"
    />
     
    <div
      class="content-card-content"
    />
  </div>
</div>
`;

exports[`ContentCard.vue renders a component with props: active with value true 1`] = `
<div>
  <div
    class="card content-card sm has-size light rounded active"
    tabindex=""
  >
    <div
      class="content-card-backdrop"
    />
     
    <div
      class="content-card-content"
    />
  </div>
</div>
`;

exports[`ContentCard.vue renders a component with props: disabled with value false 1`] = `
<div>
  <div
    class="card content-card sm has-size light rounded"
    tabindex=""
  >
    <div
      class="content-card-backdrop"
    />
     
    <div
      class="content-card-content"
    />
  </div>
</div>
`;

exports[`ContentCard.vue renders a component with props: isInteractive with value true 1`] = `
<div>
  <div
    class="card content-card sm has-size light rounded interactive"
    tabindex="0"
  >
    <div
      class="content-card-backdrop"
    />
     
    <div
      class="content-card-content"
    />
  </div>
</div>
`;

exports[`ContentCard.vue renders a component with props: type with value bordered 1`] = `
<div>
  <div
    class="card content-card sm has-size light rounded bordered"
    tabindex=""
  >
    <div
      class="content-card-backdrop"
    />
     
    <div
      class="content-card-content"
    />
  </div>
</div>
`;
